manifests/traffic/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kronos
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: kronos.mywonderworks.tech
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: kronos.mywonderworks.tech
      tls:
        mode: Terminate
        certificateRefs:
          - name: kronos-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
